tests/type/good/main.hel
foreign io_unit: IO<()>;

main: IO<()> = io_unit;
