tests/type/bad/compare_mixed_numeric.hel
foreign io_unit: IO<()>;

x = 1 < 2.0;

main = io_unit;
